show-hide playlist event

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <body>
         <div class="main-container">
             <article class="mp3-player">
+                <audio src="" preload="auto"></audio>
                 <section class="art-box">
                     <div class="cover-container">
                         <img class="playlist-icon"src="src/assets/icons/playlist_play.svg" alt="play list">
@@ -41,10 +42,10 @@
                 <p class="border-bottom">1. Audioslave - Like a stone</p>
                 <p class="border-bottom">2. Cuarteto de nos - Contrapunto para humano y computadora </p>
                 <p class="border-bottom">3. Eagles - Hotel california</p>
-                <p>cuatro</p>
+                <p class="border-bottom">4. Buitres - Cadillac solitario</p>
             </article>
         </div>
         
     </body>
-    <script src="src/assets/js/index.js"></script>
+    <script src="src/js/index.js"></script>
 </html>
