--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
                     <div class="controls-flex">
                         <img class="control-icon" id="previous" src="src/assets/icons/skip_previous.svg" alt="skip previus icon">
-                        <img class="control-icon" id="play-icon" src="src/assets/icons/play_arrow.svg" alt=" play arrow icon">
+                        <img class="control-icon" id="play" src="src/assets/icons/play_arrow.svg" alt=" play arrow icon">
                         <img class="control-icon" id="next" src="src/assets/icons/skip_next.svg" alt="skip next icon">
                     </div>
                 </section>
