shuffle list function

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                         <img class="control-icon" id="play" src="src/assets/icons/play_arrow.svg" alt=" play arrow icon">
                         <img class="control-icon" id="next" src="src/assets/icons/skip_next.svg" alt="skip next icon">
                     </div>
+                    <img class="shuffle" src="src/assets/icons/shuffle.svg" alt="shuffle icon">
                 </section>
                 <div class="status-box">
                     <p>Cuando sólo hay un candidato, solo hay una elección</p>
