function to load song data

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <section class="art-box">
                     <div class="cover-container">
                         <img class="playlist-icon"src="src/assets/icons/playlist_play.svg" alt="play list">
-                        <img class="cover" src="src/assets/covers/likeastone.jpeg" alt="cover">
+                        <img class="cover" src="" alt="cover">
                     </div>
                 </section>
                 
