elapsed time function

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
                     <div class="cover-container">
                         <img class="playlist-icon"src="src/assets/icons/playlist_play.svg" alt="play list">
                         <img class="cover" src="" alt="cover">
+                        <span class="current-time">00:00</span>
+                        <span class="duration">04:55</span>
                     </div>
                 </section>
                 
-    
                 <section class="controls-box">
                     <h2 class="song-name">Like a stone</h2>
                     <span class="song-autor">Audioslave</span>
